--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "universal-image-classifier"
-version = "1.0.0"
+version = "1.0.0" 
 description = "A flexible, PyTorch-based image classification framework"
 readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "MIT"}
 authors = [
-    {name = "Your Name", email = "your.email@example.com"},
+    {name = "Ranjeet Jha", email = "ranjeet.j@gmail.com"},
 ]
 keywords = ["image-classification", "pytorch", "machine-learning", "deep-learning", "computer-vision"]
 classifiers = [
@@ -56,10 +56,10 @@ all = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/universal-image-classifier"
-Repository = "https://github.com/yourusername/universal-image-classifier"
-Documentation = "https://github.com/yourusername/universal-image-classifier#readme"
-"Bug Reports" = "https://github.com/yourusername/universal-image-classifier/issues"
+Homepage = "https://github.com/hightechguys79/universal-image-classifier"
+Repository = "https://github.com/hightechguys79/universal-image-classifier"
+Documentation = "https://github.com/hightechguys79/universal-image-classifier#readme"
+"Bug Reports" = "https://github.com/hightechguys79/universal-image-classifier/issues"
 
 [project.scripts]
 uic-train = "examples.train_example:main"
